--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ bobot-*.tar
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
 
+/config/bobot_config.ex
 # In case you use Node.js/npm, you want to ignore these.
 npm-debug.log
 /assets/node_modules/
